<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="Steps: "
        android:textStyle="bold|italic"
        android:layout_margin="10dp"
        android:textColor="@color/SandyBrown" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipeSteps_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>