<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/Cornsilk"
    android:padding="15dp">
    <TextView
        android:id="@+id/toTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="Recipes: "
        android:textStyle="bold|italic"
        android:layout_margin="10dp"
        android:textColor="@color/SandyBrown" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ></android.support.v7.widget.RecyclerView>

</LinearLayout>