<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Cornsilk">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeDetailsActivity"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/LemonChiffon">

        <TextView
            android:id="@+id/recipeNameDetails_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textStyle="bold|italic"
            android:layout_gravity="center"
            android:textColor="@color/Brown" />
    </android.support.v7.widget.CardView>
    <ImageView
        android:id="@+id/recipe_iv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/recipeIngredientsDetails_tv"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textColor="@color/SandyBrown"
        android:layout_marginBottom="10dp"
        android:text="Ingredients"/>
    <TextView
        android:id="@+id/recipeStepsDetails_tv"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textColor="@color/SandyBrown"
        android:text="Steps"/>


</LinearLayout>
    </ScrollView>