...
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
    </FrameLayout>
    <TextView
        android:id="@+id/description_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:paddingTop="50dp"
        android:textColor="@color/SandyBrown"
        android:textAlignment="center"
...
